// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntertainmentSystem should change song 1`] = `
<EntertainmentSystemContent
  currentSong={
    Object {
      "id": "2",
      "rating": 1,
      "seconds": 60,
      "title": "test 2",
    }
  }
  diff={0}
  length={120}
  list={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 2,
        "list": Array [
          Object {
            "id": "1",
            "rating": 1,
            "seconds": 60,
            "title": "test",
          },
          Object {
            "id": "2",
            "rating": 1,
            "seconds": 60,
            "title": "test 2",
          },
        ],
      },
    }
  }
  onChange={[Function]}
  onEnd={[Function]}
  playlist={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 1,
        "list": Array [
          Object {
            "id": "1",
            "rating": 1,
            "seconds": 60,
            "title": "test",
          },
        ],
      },
    }
  }
  playlistLength={120}
/>
`;

exports[`EntertainmentSystem should end song on empty list 1`] = `<EntertainmentSystemLastSongPlayed />`;

exports[`EntertainmentSystem should end the first song 1`] = `
<EntertainmentSystemContent
  currentSong={
    Object {
      "id": "1",
      "rating": 1,
      "seconds": 60,
      "title": "test",
    }
  }
  diff={0}
  length={120}
  list={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 2,
        "list": Array [
          Object {
            "id": "1",
            "rating": 1,
            "seconds": 60,
            "title": "test",
          },
          Object {
            "id": "2",
            "rating": 1,
            "seconds": 60,
            "title": "test 2",
          },
        ],
      },
    }
  }
  onChange={[Function]}
  onEnd={[Function]}
  playlist={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 1,
        "list": Array [
          Object {
            "id": "2",
            "rating": 1,
            "seconds": 60,
            "title": "test 2",
          },
        ],
      },
    }
  }
  playlistLength={120}
/>
`;

exports[`EntertainmentSystem should end the first song 2`] = `
<EntertainmentSystemContent
  currentSong={
    Object {
      "id": "1",
      "rating": 1,
      "seconds": 60,
      "title": "test",
    }
  }
  diff={0}
  length={120}
  list={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 2,
        "list": Array [
          Object {
            "id": "1",
            "rating": 1,
            "seconds": 60,
            "title": "test",
          },
          Object {
            "id": "2",
            "rating": 1,
            "seconds": 60,
            "title": "test 2",
          },
        ],
      },
    }
  }
  onChange={[Function]}
  onEnd={[Function]}
  playlist={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 1,
        "list": Array [
          Object {
            "id": "2",
            "rating": 1,
            "seconds": 60,
            "title": "test 2",
          },
        ],
      },
    }
  }
  playlistLength={120}
/>
`;

exports[`EntertainmentSystem should end the last song of the list 1`] = `
<EntertainmentSystemContent
  currentSong={
    Object {
      "id": "1",
      "rating": 1,
      "seconds": 60,
      "title": "test",
    }
  }
  diff={60}
  length={120}
  list={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 1,
        "list": Array [
          Object {
            "id": "1",
            "rating": 1,
            "seconds": 60,
            "title": "test",
          },
        ],
      },
    }
  }
  onChange={[Function]}
  onEnd={[Function]}
  playlist={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 0,
        "list": Array [],
      },
    }
  }
  playlistLength={60}
/>
`;

exports[`EntertainmentSystem should render 1`] = `
Array [
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        2
         songs
      </span>
    </div>
  </div>,
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/1/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
              </div>
            </div>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test 2
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`EntertainmentSystem should render 2`] = `
Array [
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        2
         songs
      </span>
    </div>
  </div>,
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/1/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
              </div>
            </div>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test 2
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`EntertainmentSystem should render empty playlist message 1`] = `
<EntertainmentSystemContent
  currentSong={
    Object {
      "id": "1",
      "rating": 1,
      "seconds": 0,
      "title": "1",
    }
  }
  diff={120}
  length={120}
  list={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 0,
        "list": Array [
          undefined,
        ],
      },
    }
  }
  onChange={[Function]}
  onEnd={[Function]}
  playlist={
    Queue {
      "enqueue": [Function],
      "list": ArrayList {
        "index": 0,
        "list": Array [
          undefined,
        ],
      },
    }
  }
  playlistLength={0}
/>
`;
